--- a/k8s_deployment/mqtt-broker.yaml
+++ b/k8s_deployment/mqtt-broker.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1 
 kind: Deployment 
 metadata: 
-  name: broker-depl-name 
+  name: mqttbroker 
   labels: 
         app: myappbroker 
 spec: 
